--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,16 +1,18 @@
+/*Estilos generales*/
 @import "base/estilosGenerales";
+/*Estilos generales*/
 
-/*components*/
+/*Components*/
 @import "components/header";
 @import "components/integrantes";
 @import "components/main";
 @import "components/footer";
 @import "components/aside";
-/*components*/
+/*Components*/
     
 
 
-/*compilado pruebaaaaaaaaaaaaaa*/
+
 
 
 
