--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,21 +1,23 @@
-header{
+header {
 
     height: 290px;
     padding: 1% 1% 1% 1%;
     background-color: rgb(0, 0, 0);
-    margin-bottom: -75px;  
+    margin-bottom: -75px;
 
-   /*header nav*/ a:hover {
+    /*header nav*/
+    a:hover {
         background-color: rgb(218, 0, 0);
         border-radius: 50px;
     }
 }
-.Logo-sumo-1{
+
+.Logo-sumo-1 {
     width: 50px;
     height: 65px;
 }
 
-.navegacion{
+.navegacion {
     text-align: center;
     font-size: 30px;
     display: flex;
@@ -40,7 +42,7 @@ header{
     }
 }
 
-.botones{
+.botones {
     color: whitesmoke;
     text-decoration: none;
     padding: 10px 20px;
@@ -73,37 +75,51 @@ header{
 .quinto-boton {
     grid-area: quinto-boton;
 }
+
 /*primer a quinto boton hover*/
 .primer-boton:hover {
     transform: scale(1.1);
     transition-property: all;
     transition-duration: 1.2s;
+    color:
+        /*white;*/
+        black;
 }
 
 .segundo-boton:hover {
     transform: scale(1.1);
     transition-property: all;
     transition-duration: 1.2s;
+    color:
+        /*white;*/
+        black;
 }
 
 .tercer-boton:hover {
     transform: scale(1.1);
     transition-property: all;
     transition-duration: 1.2s;
+    color:
+        /*white;*/
+        black;
 }
 
 .cuarto-boton:hover {
     transform: scale(1.1);
     transition-property: all;
     transition-duration: 1.2s;
+    color:
+        /*white;*/
+        black;
 }
 
 .quinto-boton:hover {
     transform: scale(1.1);
     transition-property: all;
     transition-duration: 1.2s;
+    color:
+        /*white;*/
+        black;
 }
+
 /*primer a quinto boton hover*/
-
-
- 
